gh-pages config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nebagit.github.io/employee-management-system-deployed",
+  "homepage": "https://nebagit.github.io/Employee-mgt-syst",
   "name": "react-employee-management-system",
   "version": "0.1.0",
   "private": true,
